--- a/services/ingestion-service/package.json
+++ b/services/ingestion-service/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.12.0",
+        "@xenova/transformers": "^2.14.0",
         "@prisma/client": "^5.7.0",
         "amqplib": "^0.10.3",
         "chromadb": "^1.8.1",
