passed env variables to client build

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,6 +11,18 @@ RUN npm install
 # Copy source code
 COPY . .
 
+# Build args
+ARG REACT_APP_AUTH_SERVICE_URL
+ARG REACT_APP_CHAT_SERVICE_URL
+ARG REACT_APP_ADMIN_SERVICE_URL
+ARG REACT_APP_INGESTION_SERVICE_URL
+
+# Set env vars for build
+ENV REACT_APP_AUTH_SERVICE_URL=$REACT_APP_AUTH_SERVICE_URL
+ENV REACT_APP_CHAT_SERVICE_URL=$REACT_APP_CHAT_SERVICE_URL
+ENV REACT_APP_ADMIN_SERVICE_URL=$REACT_APP_ADMIN_SERVICE_URL
+ENV REACT_APP_INGESTION_SERVICE_URL=$REACT_APP_INGESTION_SERVICE_URL
+
 # Build app
 RUN npm run build
 
