--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -211,12 +211,17 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
+      args:
+        REACT_APP_AUTH_SERVICE_URL: ${REACT_APP_AUTH_SERVICE_URL}
+        REACT_APP_CHAT_SERVICE_URL: ${REACT_APP_CHAT_SERVICE_URL}
+        REACT_APP_ADMIN_SERVICE_URL: ${REACT_APP_ADMIN_SERVICE_URL}
+        REACT_APP_INGESTION_SERVICE_URL: ${REACT_APP_INGESTION_SERVICE_URL}
     container_name: sage-client
     environment:
-      REACT_APP_AUTH_SERVICE_URL: http://localhost:3001
-      REACT_APP_CHAT_SERVICE_URL: http://localhost:3002
-      REACT_APP_ADMIN_SERVICE_URL: http://localhost:3003
-      REACT_APP_INGESTION_SERVICE_URL: http://localhost:3004
+      REACT_APP_AUTH_SERVICE_URL: ${REACT_APP_AUTH_SERVICE_URL}
+      REACT_APP_CHAT_SERVICE_URL: ${REACT_APP_CHAT_SERVICE_URL}
+      REACT_APP_ADMIN_SERVICE_URL: ${REACT_APP_ADMIN_SERVICE_URL}
+      REACT_APP_INGESTION_SERVICE_URL: ${REACT_APP_INGESTION_SERVICE_URL}
     ports:
       - "3000:3000"
     depends_on:
